Partial dynamic-access coverage for org.xerial.snappy.SnappyLoader (11/13)